--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -30,4 +30,4 @@ jobs:
           git config user.email "actions@github.com"
           git add assets/snake.svg assets/snake.gif
           git commit -m "chore: update snake animation" || echo "No changes to commit"
-          git push https://<MinecraftLetsPlay>:${{ secrets.PAT_1 }}@github.com/<MinecraftLetsPlay>/<MinecraftLetsPlay>.git HEAD:main
+          git push https://MinecraftLetsPlay:${{ secrets.PAT_1 }}@github.com/MinecraftLetsPlay/MinecraftLetsPlay.git HEAD:main
